Create Task model and controller, nest Task in Project route, and show tasks for projects.

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Actions</th>
+      <th>Tasks</th>
     </tr>
   </thead>
 
@@ -13,6 +14,7 @@
       <tr>
         <td><%= project.name %></td>
         <td>
+          <%= link_to 'Add Task', new_project_task_path(project) %>
           <%= link_to 'Show', project, class: 'btn' %>
           <%= link_to 'Edit', edit_project_path(project), class: 'btn' %>
           <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
